--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,9 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
